# advent-of-code

./: .gitignore  README.md
2023/: skeleton.c
2024/: .gitignore  Cargo.toml
2024/d1/src/: main.rs
2024/d10/src/: main.rs
2024/d11/src/: main.rs
2024/d12/: Cargo.toml
2024/d12/src/: main.rs
2024/d13/: Cargo.toml
2024/d13/src/: main.rs
2024/d14/: Cargo.toml
2024/d14/src/: main.rs
2024/d15/src/: main.rs  test.rs
2024/d16/: Cargo.toml
2024/d16/src/: main.rs
2024/d17/: Cargo.toml
2024/d17/src/: main.rs
2024/d18/: Cargo.toml
2024/d18/src/: main.rs
2024/d19/src/: main.rs
2024/d2/src/: main.rs
2024/d20/: Cargo.toml
2024/d20/src/: main.rs
2024/d22/: Cargo.toml
2024/d22/src/: main.rs
2024/d3/: Cargo.toml  input_test
2024/d3/src/: main.rs
2024/d4/src/: main.rs
2024/d5/src/: main.rs
2024/d6/src/: main.rs
2024/d7/: Cargo.toml
2024/d7/src/: main.rs
2024/d8/: Cargo.toml
2024/d8/src/: main.rs
2024/d9/src/: main.rs
2024/extra/d24/: graph.dot
2024/src/: lib.rs  main.rs  utils.rs
2024/src/d1/: mod.rs
2024/src/d10/: mod.rs
2024/src/d11/: mod.rs
2024/src/d12/: mod.rs
2024/src/d13/: mod.rs
2024/src/d14/: mod.rs
2024/src/d15/: mod.rs
2024/src/d16/: mod.rs
2024/src/d17/: mod.rs
2024/src/d18/: mod.rs
2024/src/d19/: mod.rs
2024/src/d2/: mod.rs
2024/src/d20/: mod.rs
2024/src/d22/: mod.rs
2024/src/d23/: mod.rs
2024/src/d24/: mod.rs
2024/src/d3/: mod.rs
2024/src/d4/: mod.rs
2024/src/d5/: mod.rs
2024/src/d6/: mod.rs
2024/src/d7/: mod.rs
2024/src/d8/: mod.rs
2024/src/d9/: mod.rs
(+71 files in other folders)
